# DacovaSegmentationDemo

./: README.md  infer_onnx.py  infer_openvino.py  utils.py
cpp/: Dockerfile  main.cpp
onnx_cpp/: CMakeLists.txt  main.cpp
openvino_cpp/: main.cpp
scripts/: infer.sh
weights/openvino/: model_20221222_13530_576984.json  model_20221222_13530_576984.mapping  model_20221222_13530_576984.xml  model_20221222_13530_576984_result.json  model_2023110_191736_351410.json  model_2023110_191736_351410.mapping  model_2023110_191736_351410.xml  model_2023110_191736_351410_result.json
